[gd_scene load_steps=6 format=3 uid="uid://dd87khg05tnm0"]

[ext_resource type="PackedScene" uid="uid://bfw7jp1wfuqal" path="res://UI/shared/button.tscn" id="1_2x0sc"]
[ext_resource type="Script" path="res://UI/pause-menu/pause-menu-ui.gd" id="1_bvrmx"]
[ext_resource type="Theme" uid="uid://doff4d8cld34g" path="res://assets/UI/themes/UI-elements/menu-small.tres" id="1_h55po"]
[ext_resource type="Theme" uid="uid://25bwyxl2sixn" path="res://assets/UI/themes/UI-elements/button-menu.tres" id="2_mjrbk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_flo0u"]

[node name="PauseMenuUI" type="Control"]
z_index = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_bvrmx")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(350, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -200.0
offset_right = 175.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_h55po")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_flo0u")

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Pause Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Continue" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("1_2x0sc")]
custom_minimum_size = Vector2(225, 45)
layout_mode = 2
theme = ExtResource("2_mjrbk")
text = "Continue"
flat = false
version = 2

[node name="SaveGame" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("1_2x0sc")]
custom_minimum_size = Vector2(225, 45)
layout_mode = 2
theme = ExtResource("2_mjrbk")
text = "Save Game"
flat = false
version = 2

[node name="LoadGame" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("1_2x0sc")]
custom_minimum_size = Vector2(225, 45)
layout_mode = 2
theme = ExtResource("2_mjrbk")
text = "Load Game"
flat = false
version = 2

[node name="Exit" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("1_2x0sc")]
custom_minimum_size = Vector2(225, 45)
layout_mode = 2
theme = ExtResource("2_mjrbk")
text = "Exit"
flat = false
version = 2

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/SaveGame" to="." method="_on_save_game_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/LoadGame" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
